--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "test": "vitest",
+    "coverage": "vitest run --coverage",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -15,8 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sass": "^1.59.3",
-    "uuid": "^9.0.0",
-    "vite-plugin-svgr": "^2.4.0"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -25,10 +25,12 @@
     "@types/react-dom": "^18.0.10",
     "@types/uuid": "^9.0.1",
     "@vitejs/plugin-react": "^3.1.0",
+    "@vitest/coverage-c8": "^0.29.3",
     "jsdom": "^21.1.1",
     "prettier": "^2.8.4",
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
+    "vite-plugin-svgr": "^2.4.0",
     "vitest": "^0.29.2"
   }
 }
