--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "@stryker-mutator/core": "^6.4.1",
+    "@stryker-mutator/jest-runner": "^6.4.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
