--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/uuid": "^9.0.1",
+    "prettier": "^2.8.6",
     "typescript": "^4.9.5"
   },
   "scripts": {
